==> maxibooksiyi/maxi-11th-NXP-SmartCarCompetition/车子程序历史改动版本综合/三个传感器基于徐亮再加上我的拟合算法的版本。/keyipao/Chip/src/oled.c <==
#include<common.h>
#include<oled.h>
#include "include.h"
#define XLevelL		0x00
#define XLevelH		0x10
#define XLevel		((XLevelH&0x0F)*16+XLevelL)
#define Max_Column	128
#define Max_Row		64
#define	Brightness	0xCF
#define X_WIDTH 128
#define Y_WIDTH 64

void LCD_WrDat(byte data)
{
	byte i=8;
	//LCD_CS=0;;
	GPIOE_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(0));;;;
        asm("nop"); 
      GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(6));;;;
      asm("nop");    
  while(i--)
  {
    if(data&0x80){GPIOE_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(4));;;;}
    else{GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(4));;;;}
    GPIOE_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(6)); 
    asm("nop");;;;
		//asm("nop");            
    GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(6));;;;;    
    data<<=1;    
  }
	//LCD_CS=1;
}

void LCD_WrCmd(byte cmd)
{
	byte i=8;
	
	//LCD_CS=0;;
  GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(0));;;;;
  GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(6));;;;;
  //asm("nop");   
  while(i--)
  {
    if(cmd&0x80){GPIOE_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(4));;;;;}
    else{GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(4));;;;;;}
    GPIOE_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(6));;;;;
    asm("nop");;;;
		//asm("nop");             
    GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(6));;;;;    
    cmd<<=1;;;;;   
  } 	
	//LCD_CS=1;
}

void LCD_Init(void)        
{
        //设置PORTA pin14,pin15为GPIO口 
	PORTE_PCR2=(0|PORT_PCR_MUX(1));
	PORTE_PCR0=(0|PORT_PCR_MUX(1)); 
	PORTE_PCR6=(0|PORT_PCR_MUX(1));
	PORTE_PCR4=(0|PORT_PCR_MUX(1)); 
	
	//设置PORTA pin14,pin15为输出方向;pin16,pin17为输入方向
	GPIOE_PDDR=GPIO_PDDR_PDD(GPIO_PIN(2)|GPIO_PIN(0)|GPIO_PIN(6)|GPIO_PIN(4));
	
  
	GPIOE_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(6));
	//LCD_CS=1;	//预制SLK和SS为高电平   	
	
	GPIOE_PDOR &= ~GPIO_PDOR_PDO(GPIO_PIN(2));
	LCD_DLY_ms(50);
	GPIOE_PDOR |=  GPIO_PDOR_PDO(GPIO_PIN(2));

  LCD_WrCmd(0xae);//--turn off oled panel
  LCD_WrCmd(0x00);//---set low column address
  LCD_WrCmd(0x10);//---set high column address
  LCD_WrCmd(0x40);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
  LCD_WrCmd(0x81);//--set contrast control register
  LCD_WrCmd(0xcf); // Set SEG Output Current Brightness
  LCD_WrCmd(0xa1);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
  LCD_WrCmd(0xc8);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
  LCD_WrCmd(0xa6);//--set normal display
  LCD_WrCmd(0xa8);//--set multiplex ratio(1 to 64)
  LCD_WrCmd(0x3f);//--1/64 duty
  LCD_WrCmd(0xd3);//-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
  LCD_WrCmd(0x00);//-not offset
  LCD_WrCmd(0xd5);//--set display clock divide ratio/oscillator frequency
  LCD_WrCmd(0x80);//--set divide ratio, Set Clock as 100 Frames/Sec
  LCD_WrCmd(0xd9);//--set pre-charge period
  LCD_WrCmd(0xf1);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
  LCD_WrCmd(0xda);//--set com pins hardware configuration
  LCD_WrCmd(0x12);
  LCD_WrCmd(0xdb);//--set vcomh
  LCD_WrCmd(0x40);//Set VCOM Deselect Level
  LCD_WrCmd(0x20);//-Set Page Addressing Mode (0x00/0x01/0x02)
  LCD_WrCmd(0x02);//
  LCD_WrCmd(0x8d);//--set Charge Pump enable/disable
  LCD_WrCmd(0x14);//--set(0x10) disable
  LCD_WrCmd(0xa4);// Disable Entire Display On (0xa4/0xa5)
  LCD_WrCmd(0xa6);// Disable Inverse Display On (0xa6/a7) 
  LCD_WrCmd(0xaf);//--turn on oled panel
  LCD_Fill(0x00);  //初始清屏
  LCD_Set_Pos(0,0);  
	
}
